[metadata]
name = python-sandbox
version = 0.1
description = A Python sandbox library
long_description = file: README.rst
url = https://github.com/clinoge/python-sandbox
author = Carlos Gottberg
author_email = carlos.gottberg@outlook.com
license = BSD 2-clause
classifiers =
    Environment :: Library
    Intended Audience :: Developers
    License :: BSD 2-clause
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
